--- a/urly_bird/templates/urly_bird/any_user_list.html
+++ b/urly_bird/templates/urly_bird/any_user_list.html
@@ -1,4 +1,5 @@
 {% extends 'urly_bird/urly_bird_base.html' %}
+{% load staticfiles %}
 
 {% block content %}
     <h4>show bookmark creator's name here</h4>
